# app/Models/User.php
@@ -64,4 +64,29 @@ class User extends Authenticatable
       }
     }
 
+
+    public function addresses()
+    {
+        return $this->hasMany(Address::class);
+    }
+
+
+    public static function updateUserInfo($user, $request)
+    {
+        $image = self::saveImage($request->file);
+
+        $user->update([
+            'name'=>$request->input('name'),
+            'phone'=>$request->input('phone'),
+            'photo'=>$image,
+        ]);
+
+        $user->addresses()->create([
+            'address'=>$request->input('address'),
+            'postal_code'=>$request->input('postal_code'),
+            'lat'=>$request->input('lat'),
+            'lang'=>$request->input('lang'),
+        ]);
+    }
+
 }
